# panthy_insys_mro

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  modules.rst  usage.rst
src/: install_service.sh
src/panthyr_insys_mro/: insys_mro.py  log.csv  manage_modem_modes.py  manage_profiles.py
